--- a/index.html
+++ b/index.html
@@ -7,39 +7,55 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="3.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Слайдер | Проект 3</title>
   </head>
   <body>
     <div class="container">
       <div class="sidebar">
         <div
-          style="background: linear-gradient(229.99deg, #adaeae -26%, #7e7e7e 145%);">
+          style="
+            background: linear-gradient(229.99deg, #adaeae -26%, #7e7e7e 145%);
+          "
+        >
           <h1>Snow in the desert</h1>
           <p>Love, death & robots</p>
         </div>
         <div
-          style="background: linear-gradient(215.32deg, #dfe2b3 -1%, #b6be88 124%);">
+          style="
+            background: linear-gradient(215.32deg, #dfe2b3 -1%, #b6be88 124%);
+          "
+        >
           <h1>Life Hutch</h1>
           <p>Love, death & robots</p>
         </div>
         <div
-          style="background: linear-gradient(221.87deg, #d07879 -1%, #8b5656 124%);">
+          style="
+            background: linear-gradient(221.87deg, #d07879 -1%, #8b5656 124%);
+          "
+        >
           <h1>Zima Blue</h1>
           <p>Love, death & robots</p>
         </div>
         <div
-          style="background: linear-gradient(220.16deg, #96d4d8 -8%, #6893a0 138%);">
+          style="
+            background: linear-gradient(220.16deg, #96d4d8 -8%, #6893a0 138%);
+          "
+        >
           <h1>Automated Customer Service</h1>
           <p>Love, death & robots</p>
         </div>
       </div>
       <div class="main-slide">
         <div
-          style="background-image: url('https://images.unsplash.com/photo-1684689709906-0219c9af3374?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80');"
+          style="
+            background-image: url('https://images.unsplash.com/photo-1684689709906-0219c9af3374?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80');
+          "
         ></div>
         <div
-          style="background-image: url('https://images.unsplash.com/photo-1683902299180-4d7671cfa3b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1854&q=80');"
+          style="
+            background-image: url('https://images.unsplash.com/photo-1683902299180-4d7671cfa3b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1854&q=80');
+          "
         ></div>
         <div
           style="
@@ -61,6 +77,6 @@
         </button>
       </div>
     </div>
-    <script src="3.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
